--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "express-sample",
-  "version": "0.0.1",
+  "name": "hello",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "*",
-    "jade": "*"
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
   }
 }
